@@ -283,6 +283,8 @@ public class DecimateHalfEdge extends AbstractAlgoHalfEdge
 		v1 = current.origin();
 		v2 = current.destination();
 		assert v1 != v2 : current;
+		if (!v1.isWritable() && !v2.isWritable())
+			return false;
 		/* FIXME: add an option so that boundary nodes may be frozen. */
 		q1 = (Quadric3DError) quadricMap.get(v1);
 		q2 = (Quadric3DError) quadricMap.get(v2);
